# datagram-ETL

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  test.py
cmake/: FindBerkleyDB.cmake  FindGMP.cmake  FindRocksDB.cmake  Findsnappy.cmake  LibFindMacros.cmake
src/: etl.h
src/conf/: ConfigurationFile.cpp  ConfigurationFile.h
src/graphs/: LoadingGraph.cpp  LoadingGraph.h  LoadingGraph.h.html  TransformationGraph.cpp  TransformationGraph.h  highlight.pack.js
src/graphs/utils/primary_memory/: ERVertex.cpp  ERVertex.h  element.cpp  element.h  value.cpp  value.h
src/graphs/utils/secondary_memory/: hashIndex.cpp  hashIndex.h  header.cpp  header.h  vertex_id_index.cpp  vertex_id_index.h
src/maps/: AdjacencyList.cpp  AdjacencyList.h  NestingIndex.cpp  NestingIndex.h  OffsetMap.cpp  OffsetMap.h  TransformationGraphAdjacencyList.cpp  TransformationGraphAdjacencyList.h  VertexHash.cpp  VertexHash.h
src/sets/: VertexStack.cpp  VertexStack.h
src/sorting/: AbstractSortingStrategy.cpp  AbstractSortingStrategy.h  HashStrategy.cpp  HashStrategy.h  IdStrategy.cpp  IdStrategy.h  SortingStrategy.cpp  SortingStrategy.h  SortingStrategyFactory.cpp  SortingStrategyFactory.h
src/utils/old_code/: Serialize.cpp  Serialize.h  mmapFile.cpp  mmapFile.h
test/: test_hashstrategy_class.cpp  test_hashstrategy_class.h  test_idstrategy_class.cpp  test_idstrategy_class.h  test_sorting_strategies.cpp  test_sorting_strategies.h
